feat: add filters endpoint
